; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_codeseq1.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_codeseq1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fullset = common dso_local global i32* null, align 8
@NOINST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32, i32*)* @codeseq1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @codeseq1(i32* %0, i32* %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i64 @needfollow(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %5
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = call i32 @getfirst(i32* %17, i32* %18, i32* %12)
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @codegen(i32* %20, i32* %21, i32 0, i32 %22, i32* %12)
  br label %30

24:                                               ; preds = %5
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** @fullset, align 8
  %29 = call i32 @codegen(i32* %25, i32* %26, i32 0, i32 %27, i32* %28)
  br label %30

30:                                               ; preds = %24, %16
  %31 = load i32*, i32** %8, align 8
  %32 = call i64 @fixedlen(i32* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i32, i32* @NOINST, align 4
  store i32 %35, i32* %6, align 4
  br label %38

36:                                               ; preds = %30
  %37 = load i32, i32* %10, align 4
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %36, %34
  %39 = load i32, i32* %6, align 4
  ret i32 %39
}

declare dso_local i64 @needfollow(i32*) #1

declare dso_local i32 @getfirst(i32*, i32*, i32*) #1

declare dso_local i32 @codegen(i32*, i32*, i32, i32, i32*) #1

declare dso_local i64 @fixedlen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
